<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".ui.page.auth.RegisterActivity">

  <androidx.appcompat.widget.Toolbar
      android:id="@+id/top_toolbar"
      style="@style/TopToolbar"
      android:layout_width="match_parent"
      android:layout_height="@dimen/height_top_toolbar"
      android:contentInsetStart="0dp"
      android:contentInsetLeft="0dp"
      android:minHeight="@dimen/height_top_toolbar"
      app:contentInsetLeft="0dp"
      app:contentInsetStart="0dp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.5"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.0">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

      <TextView
          android:id="@+id/textView"
          style="@style/TextViewMain"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/sign_up"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintStart_toEndOf="@+id/buttonBack"
          app:layout_constraintTop_toTopOf="parent" />

      <ImageButton
          android:id="@+id/buttonBack"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:background="@color/delete_background"
          android:contentDescription="@string/button_back"
          android:minWidth="48dp"
          android:minHeight="48dp"
          android:src="@drawable/ic_baseline_keyboard_backspace_24"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

  </androidx.appcompat.widget.Toolbar>

  <EditText
      android:id="@id/username"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginStart="8dp"
      android:layout_marginTop="128dp"
      android:layout_marginEnd="8dp"
      android:ems="10"
      android:hint="@string/username_plain_text"
      android:inputType="textPersonName"
      android:minHeight="@dimen/min_height_edit_text_for_authorization"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.0"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

  <EditText
      android:id="@id/password"
      style="@style/TextViewMain"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginStart="8dp"
      android:layout_marginTop="16dp"
      android:layout_marginEnd="8dp"
      android:ems="10"
      android:hint="@string/enter_your_password"
      android:importantForAutofill="no"
      android:inputType="textPassword"
      android:minHeight="@dimen/min_height_edit_text_for_authorization"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.0"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/editTextEmailAddress" />

  <Button
      android:id="@+id/buttonCreateAccount"
      android:text="@string/sign_up"
      style="@style/BigButtonStyle"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent" />

  <EditText
      android:id="@+id/editTextEmailAddress"
      android:hint="@string/enter_you_email"
      android:minHeight="@dimen/min_height_edit_text_for_authorization"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginStart="8dp"
      android:layout_marginTop="16dp"
      android:layout_marginEnd="8dp"
      android:ems="10"
      android:inputType="textEmailAddress"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.0"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/username" />

  <ProgressBar
      android:visibility="invisible"
      android:id="@+id/progressBarSignUp"
      style="?android:attr/progressBarStyle"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="32dp"
      android:indeterminate="false"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/password" />

</androidx.constraintlayout.widget.ConstraintLayout>