<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.page.productpage.ProductPage">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/top_toolbar"
        style="@style/TopToolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_top_toolbar"
        android:contentInsetStart="0dp"
        android:contentInsetLeft="0dp"
        android:minHeight="@dimen/height_top_toolbar"
        app:contentInsetLeft="0dp"
        app:contentInsetStart="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageButton
                android:id="@+id/buttonBack"
                style="@style/ButtonBackStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="0dp"
                android:layout_marginBottom="0dp"
                android:contentDescription="@string/button_back"
                android:minHeight="48dp"
                android:src="@drawable/ic_baseline_keyboard_backspace_24" />

            <ImageView
                android:id="@+id/app_logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_stima_market" />
        </RelativeLayout>

    </androidx.appcompat.widget.Toolbar>

    <Button
        android:id="@+id/buttonAddToBag"
        style="@style/BigButtonStyle"
        android:text="@string/add_to_bag"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/productPicture"
        android:layout_width="0dp"
        android:layout_height="260dp"
        android:contentDescription="Product Picture"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/top_toolbar"
        tools:src="@tools:sample/avatars" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/productPicture">

        <ImageView
            android:id="@+id/productOtherColor"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="1"
            tools:src="@tools:sample/avatars" />

        <ImageView
            android:id="@+id/productOtherColor1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="2"
            tools:src="@tools:sample/avatars" />

        <ImageView
            android:id="@+id/productOtherColor2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="3"
            tools:src="@tools:sample/avatars" />

    </LinearLayout>

    <TextView
        android:id="@+id/productTitle"
        style="@style/TextViewMain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="8dp"
        android:text="Product Title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <TextView
        android:id="@+id/productPrice"
        style="@style/TextViewMain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="Price"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.937"
        app:layout_constraintStart_toEndOf="@+id/productTitle"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <TextView
        android:id="@+id/productDescription"
        style="@style/TextViewExtra"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="8dp"
        android:text="Product Description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/productTitle" />

    <ImageView
        android:id="@+id/favoriteIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/ic_baseline_favorite_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/productDescription"
        app:tint="@color/click_on_favorite_icon" />

    <Spinner
        android:id="@+id/spinnerOfSize"
        android:layout_width="313dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:entries="@array/string_size"
        android:minHeight="48dp"
        android:spinnerMode="dropdown"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/favoriteIcon"
        app:layout_constraintTop_toBottomOf="@+id/productDescription" />


</androidx.constraintlayout.widget.ConstraintLayout>